refactor: replace Collectors with direct toList calls