@@ -25,7 +25,6 @@ import de.uni_passau.fim.se2.litterbox.ast.model.metadata.Metadata;
 import de.uni_passau.fim.se2.litterbox.ast.model.procedure.ProcedureDefinition;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class MultiBlockIssue extends Issue {
 
@@ -85,7 +84,7 @@ public class MultiBlockIssue extends Issue {
     public List<ASTNode> getNormalizedNodes() {
         if (normalizedNodes == null) {
             NormalizationVisitor normalizationVisitor = new NormalizationVisitor();
-            normalizedNodes = nodes.stream().map(normalizationVisitor::apply).collect(Collectors.toList());
+            normalizedNodes = nodes.stream().map(normalizationVisitor::apply).toList();
         }
         return normalizedNodes;
     }
